--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,29 @@ dependencies {
 
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
+
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+
+    //Koin
+    def koin_version = '3.3.2'
+    implementation "io.insert-koin:koin-core:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation 'io.insert-koin:koin-androidx-compose:3.4.1'
+
+
+    //Room-Duplicate Fixer
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+
+    //Interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10")
+
+    //    //LiveData
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+
+
+
 }
